@@ -1,3 +1,8 @@
+2006-03-10  Jon A. Cruz  <jon@joncruz.org>
+	* src/dialogs/swatches.cpp:
+
+	  Changed color dragging to have a color preview.
+	
 2006-03-09  Jon A. Cruz  <jon@joncruz.org>
 	* src/interface.cpp:
 
